<resources>
    <string name="app_name">MCC</string>
    <string name="emp">Employee Activity!</string>
    <string name="title">Employee Details</string>
    <string name="empid">Enter Employee ID: </string>
    <string name="name">Enter Name: </string>
    <string name="salary">Enter salary: </string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="view">View</string>
    <string name="view_all">View All Employee</string>
</resources>
